--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
     // === CONFIGURATION SECTION (EDIT HERE) ===
     // =========================================
     const CONFIG = {
-        headerLogo: 'your-header-image.png',
-        footerLogo: 'your-footer-image.png',
+        headerLogo: 'theevidencelocker.png',
+        footerLogo: 'stark4n6.jpg',
         social: {
-            website: "https://example.com",
-            github: "https://github.com/example",
-            linkedin: "https://linkedin.com/in/example",
-            x: "https://twitter.com/example"
+            website: "https://startme.stark4n6.com/",
+            github: "https://github.com/stark4n6",
+            linkedin: "https://www.linkedin.com/in/kevin-pagano/",
+            x: "https://twitter.com/stark4n6"
         }
     };
     // =========================================
@@ -352,7 +352,7 @@
     function loadActionTableScript() {
         const script = document.createElement('script');
         script.type = 'module';
-        script.src = 'https://unpkg.com/action-table/dist/action-table.js';
+        script.src = 'https://cdn.jsdelivr.net/npm/action-table/dist/action-table.js';
         document.body.appendChild(script);
     }
 
@@ -371,3 +371,4 @@
 
 </body>
 </html>
+
